--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
   </head>
   <body>
     <section class="container">
-      <!-- <picture class="pictures">
-        <source
-          media="(max-width: 900px)"
-          srcset="./images/bg-pattern-mobile.svg"
+      <div class="photos">
+        <img
+          src="./images/bg-pattern-mobile.jpg"
+          alt="bg-pattern-mobile"
+          class="pattern mob"
         />
-        <source
-          media="(min-width: 900px)"
-          srcset="./images/bg-pattern-desktop.svg"
+        <img
+          src="./images/bg-pattern-desktop.jpg"
+          alt="bg-pattern-desktop"
+          class="pattern desktop"
         />
-        <source
-          media="(max-width: 2000px)"
-          srcset="./images/illustration-box-desktop.svg"
+        <img
+          src="./images/illustration-woman-online-mobile.jpg"
+          alt="illustration-woman-online-mobile"
+          class="illustration mb"
         />
-        <source
-          media="(max-width: 900px)"
-          srcset="./images/illustration-woman-online-desktop.svg"
+        <img
+          src="./images/illustration-woman-online-desktop.jpg"
+          alt="illustration-woman-online-desktop"
+          class="illustration dek"
         />
-        <source
-          media="(min-width:900px)"
-          srcset="./images/illustration-woman-online-mobile.svg"
+        <img
+          src="./images/illustration-box-desktop.jpg"
+          alt="illustration-box-desktop"
+          class="box"
         />
-      </picture> -->
+      </div>
+
       <article>
         <h2 class="title">FAQ</h2>
 
@@ -44,12 +50,11 @@
               class="arrow"
             />
           </div>
-          <div class="answer">
-            <p>
-              You can invite up to 2 additional users on the Free plan. There is
-              no limit on team members for the Premium plan.
-            </p>
-          </div>
+
+          <p class="answer">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </p>
         </div>
 
         <div class="faq">
@@ -61,12 +66,10 @@
               class="arrow"
             />
           </div>
-          <div class="answer">
-            <p>
-              No more than 2GB. All files in your account must fit your allotted
-              storage space.
-            </p>
-          </div>
+          <p class="answer">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
         </div>
 
         <div class="faq">
@@ -78,12 +81,11 @@
               class="arrow"
             />
           </div>
-          <div class="answer">
-            <p>
-              Click “Forgot password” from the login page or “Change password”
-              from your profile page. A reset link will be emailed to you.
-            </p>
-          </div>
+
+          <p class="answer">
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </p>
         </div>
 
         <div class="faq">
@@ -95,12 +97,10 @@
               class="arrow"
             />
           </div>
-          <div class="answer">
-            <p>
-              Yes! Send us a message and we’ll process your request no questions
-              asked.
-            </p>
-          </div>
+          <p class="answer">
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </p>
         </div>
 
         <div class="faq">
@@ -112,12 +112,10 @@
               class="arrow"
             />
           </div>
-          <div class="answer">
-            <p>
-              Chat and email support is available 24/7. Phone lines are open
-              during normal business hours.
-            </p>
-          </div>
+          <p class="answer">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </p>
         </div>
       </article>
     </section>
