added css style for mobile version

--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <section class="container">
       <div class="photos">
         <img
-          src="./images/bg-pattern-mobile.jpg"
+          src="./images/bg-pattern-mobile.svg"
           alt="bg-pattern-mobile"
           class="pattern mob"
         />
         <img
-          src="./images/bg-pattern-desktop.jpg"
+          src="./images/bg-pattern-desktop.svg"
           alt="bg-pattern-desktop"
           class="pattern desktop"
         />
         <img
-          src="./images/illustration-woman-online-mobile.jpg"
+          src="./images/illustration-woman-online-mobile.svg"
           alt="illustration-woman-online-mobile"
           class="illustration mb"
         />
         <img
-          src="./images/illustration-woman-online-desktop.jpg"
+          src="./images/illustration-woman-online-desktop.svg"
           alt="illustration-woman-online-desktop"
           class="illustration dek"
         />
         <img
-          src="./images/illustration-box-desktop.jpg"
+          src="./images/illustration-box-desktop.svg"
           alt="illustration-box-desktop"
           class="box"
         />
       </div>
 
-      <article>
-        <h2 class="title">FAQ</h2>
+      <div class="main">
+        <h1 class="title">FAQ</h1>
 
         <div class="faq">
           <div class="question">
@@ -117,7 +117,7 @@
             during normal business hours.
           </p>
         </div>
-      </article>
+      </div>
     </section>
   </body>
 </html>
