--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
               class="arrow"
             />
           </div>
-
-          <p class="answer">
-            You can invite up to 2 additional users on the Free plan. There is
-            no limit on team members for the Premium plan.
-          </p>
+          <div class="answer">
+            <p>
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </div>
         </div>
 
         <div class="faq">
@@ -66,10 +67,12 @@
               class="arrow"
             />
           </div>
-          <p class="answer">
-            No more than 2GB. All files in your account must fit your allotted
-            storage space.
-          </p>
+          <div class="answer">
+            <p>
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </div>
         </div>
 
         <div class="faq">
@@ -81,11 +84,12 @@
               class="arrow"
             />
           </div>
-
-          <p class="answer">
-            Click “Forgot password” from the login page or “Change password”
-            from your profile page. A reset link will be emailed to you.
-          </p>
+          <div class="answer">
+            <p>
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </div>
         </div>
 
         <div class="faq">
@@ -97,10 +101,12 @@
               class="arrow"
             />
           </div>
-          <p class="answer">
-            Yes! Send us a message and we’ll process your request no questions
-            asked.
-          </p>
+          <div class="answer">
+            <p>
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </div>
         </div>
 
         <div class="faq">
@@ -112,10 +118,12 @@
               class="arrow"
             />
           </div>
-          <p class="answer">
-            Chat and email support is available 24/7. Phone lines are open
-            during normal business hours.
-          </p>
+          <div class="answer">
+            <p>
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
+            </p>
+          </div>
         </div>
       </div>
     </section>
