--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Frontend Mentor | FAQ Accordion Card</title>
     <link rel="reset-style" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <script src="./Functionality/main.js" async></script>
+    <script src="./js/main.js" async></script>
   </head>
   <body>
     <section class="container">
